Fix gap

--- a/apps/modernization-ui/src/styles/_tooltip.scss
+++ b/apps/modernization-ui/src/styles/_tooltip.scss
@@ -111,6 +111,7 @@ $bubbleWidth: calc($arrowWidth + 100%);
         &::after {
             border-bottom-width: $arrowWidth;
             top: 100%;
+            transform: translateY(calc(-1 * #{$arrowWidth}));
             @include vertical-arrow();
         }
     }
@@ -122,7 +123,8 @@ $bubbleWidth: calc($arrowWidth + 100%);
 
         &::after {
             border-left-width: $arrowWidth;
-            right: $bubbleWidth;
+            right: 100%;
+            transform: translateX(calc(-1 * #{$arrowWidth}));
             @include horizontal-arrow();
         }
     }
@@ -134,7 +136,8 @@ $bubbleWidth: calc($arrowWidth + 100%);
 
         &::after {
             border-right-width: $arrowWidth;
-            left: $bubbleWidth;
+            left: 100%;
+            transform: translateX(calc(-1 * #{$arrowWidth}));
             @include horizontal-arrow();
         }
     }
@@ -164,7 +167,8 @@ $bubbleWidth: calc($arrowWidth + 100%);
 
         &::after {
             border-top-width: $arrowWidth;
-            bottom: 100%;
+            bottom: 101%;
+            transform: translateY(calc(-1 * #{$arrowWidth}));
             @include vertical-arrow();
         }
     }
